syntax = "proto3";

package vehicle;

service VehicleService{
    rpc GetVehicleDetails (VehicleRequest) returns (VehicleResponseList);
}

message VehicleRequest{
    repeated string driverId = 1;
}

message VehicleResponse{
    string vehicleId = 1;
    string vehicleType = 2;
    double fare = 3;
    int32 maxSeats = 4;
    string imageUrl = 5;
    string vehicleDescription = 6;
    string driverId = 7;
}

message VehicleResponseList {
    repeated VehicleResponse vehicleResponse = 1;
}